--- a/app/src/main/res/layout/activity_minedata.xml
+++ b/app/src/main/res/layout/activity_minedata.xml
@@ -22,7 +22,7 @@
             android:id="@+id/iv_avater"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@mipmap/avater"
+            android:src="@mipmap/avatar_default"
             android:layout_marginRight="10dp"
             android:layout_gravity="center_vertical"/>
 
@@ -53,7 +53,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:textColor="@color/grayText"
-            android:text="Windir" />
+            tools:text="Windir" />
 
         <ImageView
             android:layout_width="wrap_content"
@@ -83,7 +83,7 @@
             style="@style/base_text_style"
             android:layout_gravity="center_vertical"
             android:textColor="@color/grayText"
-            android:text="灰姑娘"/>
+            tools:text="灰姑娘"/>
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -114,7 +114,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:textColor="@color/grayText"
-            android:text="18321836627" />
+            tools:text="18321836627" />
 
 
     </LinearLayout>
