--- a/app/src/main/res/layout/pop_bottom_realname_auth.xml
+++ b/app/src/main/res/layout/pop_bottom_realname_auth.xml
@@ -48,7 +48,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:maxLength="10"
-                    android:hint="输入邀请码"
+                    android:hint="输入推荐码"
                     android:paddingTop="12dp"
                     android:paddingBottom="12dp"
                     android:background="@null"/>
