--- a/app/src/main/res/layout/activity_modify_pass.xml
+++ b/app/src/main/res/layout/activity_modify_pass.xml
@@ -18,6 +18,7 @@
 
         <TextView
             style="@style/base_text_style"
+            android:layout_width="70dp"
             android:text="原密码"/>
 
         <EditText
@@ -26,7 +27,7 @@
             android:layout_height="wrap_content"
             android:background="@null"
             android:hint="输入原登录密码"
-            android:inputType="text"
+            android:inputType="textPassword"
             android:paddingBottom="12dp"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
@@ -55,6 +56,7 @@
 
         <TextView
             style="@style/base_text_style"
+            android:layout_width="70dp"
             android:text="新密码"/>
 
         <EditText
@@ -63,7 +65,7 @@
             android:layout_height="wrap_content"
             android:background="@null"
             android:hint="输入新登录密码"
-            android:inputType="text"
+            android:inputType="textPassword"
             android:paddingBottom="12dp"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
@@ -92,6 +94,7 @@
 
         <TextView
             style="@style/base_text_style"
+            android:layout_width="70dp"
             android:text="确认密码"/>
 
         <EditText
@@ -100,7 +103,7 @@
             android:layout_height="wrap_content"
             android:background="@null"
             android:hint="再次输入新登录密码"
-            android:inputType="text"
+            android:inputType="textPassword"
             android:paddingBottom="12dp"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
