--- a/app/src/main/res/layout/header_balance.xml
+++ b/app/src/main/res/layout/header_balance.xml
@@ -1,7 +1,7 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/white"
     android:orientation="vertical">
 
@@ -35,7 +35,7 @@
                     android:id="@+id/tv_balance"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="2547.00"
+                    tools:text="2547.00"
                     android:layout_marginTop="10dp"
                     android:textSize="22sp"
                     android:textColor="@color/white"
