--- a/app/src/main/res/layout/activity_withdraw.xml
+++ b/app/src/main/res/layout/activity_withdraw.xml
@@ -83,10 +83,11 @@
 
 
     <TextView
+        android:id="@+id/tv_balance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingLeft="12dp"
-        android:text="账户余额：￥2457.00"
+        android:text="账户余额：￥0.00"
         android:textColor="@color/black_title_color"
         android:textSize="12sp" />
 
