--- a/app/src/main/res/layout/item_smallvault_consume_integral.xml
+++ b/app/src/main/res/layout/item_smallvault_consume_integral.xml
@@ -1,19 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ll_root"
     android:paddingRight="12dp"
     android:paddingTop="12dp"
     android:background="@color/white"
     android:orientation="vertical">
 
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:orientation="horizontal">
+
+        <com.cinderellavip.weight.CircleImageView
+            android:id="@+id/iv_image"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="12dp"
+            android:visibility="gone"
+            tools:src="@mipmap/avater"/>
 
         <LinearLayout
             android:layout_width="0dp"
@@ -22,28 +32,33 @@
             android:layout_marginLeft="12dp"
             android:orientation="vertical">
             <TextView
+                android:id="@+id/tv_title"
                 style="@style/base_text_style"
                 android:maxLines="1"
                 android:lines="1"
                 android:ellipsize="end"
-                android:text="购买商品"
+                tools:text="购买商品"
                 />
             <TextView
+                android:id="@+id/tv_id"
                 style="@style/base_text_style"
                 android:maxLines="1"
                 android:textSize="12sp"
                 android:lines="1"
+                android:visibility="gone"
                 android:ellipsize="end"
-                android:text="订单编号：2315645646"
+                tools:text="订单编号：2315645646"
                 android:layout_marginTop="6dp"
                 />
 
             <TextView
+                android:id="@+id/tv_time"
                 style="@style/base_text_style_gray_small"
                 android:maxLines="1"
                 android:lines="1"
                 android:ellipsize="end"
-                android:text="2020.05.09 14:40:35"
+                android:visibility="gone"
+                tools:text="2020.05.09 14:40:35"
                 android:layout_marginTop="6dp"
                 />
 
@@ -52,13 +67,14 @@
 
 
         <TextView
+            android:id="@+id/tv_number"
             style="@style/base_text_style_gray_small"
             android:layout_marginLeft="12dp"
             android:textColor="@color/baseColor"
             android:maxLines="1"
             android:lines="1"
             android:ellipsize="end"
-            android:text="+200"
+            tools:text="+200"
             />
 
 
