--- a/app/src/main/res/layout/item_withdraw_history.xml
+++ b/app/src/main/res/layout/item_withdraw_history.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <View
@@ -33,14 +33,14 @@
                 android:id="@+id/tv_name"
                 style="@style/base_text_style"
                 android:layout_gravity="center_vertical"
-                android:text="余额提现"/>
+                tools:text="余额提现"/>
             <TextView
                 android:id="@+id/tv_id"
                 style="@style/base_text_style"
                 android:textSize="12sp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginTop="4dp"
-                android:text="支付宝（131****5579）"/>
+                tools:text="支付宝（131****5579）"/>
 
             <TextView
                 android:id="@+id/tv_time"
@@ -50,7 +50,7 @@
                 android:textSize="12sp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginTop="4dp"
-                android:text="2018-09-09 15:45"/>
+                tools:text="2018-09-09 15:45"/>
 
 
         </LinearLayout>
@@ -59,18 +59,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:gravity="right">
             <TextView
                 android:id="@+id/tv_status"
                 style="@style/base_text_style"
                 android:textColor="@color/baseColor"
                 android:textSize="12sp"
-                android:text="未通过"/>
+                tools:text="未通过"/>
             <TextView
                 android:id="@+id/tv_number"
                 style="@style/base_text_style"
-                android:textSize="12sp"
-                android:text="-300.00"/>
+                android:textSize="18sp"
+                tools:text="-300.00"/>
 
         </LinearLayout>
 
