--- a/app/src/main/res/layout/item_smallvault_history_rank.xml
+++ b/app/src/main/res/layout/item_smallvault_history_rank.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ll_root"
     android:paddingRight="12dp"
     android:paddingTop="15dp"
@@ -25,7 +25,7 @@
             android:maxLines="1"
             android:lines="1"
             android:ellipsize="end"
-            android:text="2020年10月"
+            tools:text="2020年10月"
             />
 
 
