--- a/app/src/main/res/layout/item_black_list.xml
+++ b/app/src/main/res/layout/item_black_list.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ll_root"
     android:background="@color/white"
     android:orientation="vertical">
@@ -23,12 +23,12 @@
             android:id="@+id/merchant_icon"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:src="@mipmap/avater"/>
+            tools:src="@mipmap/avater"/>
         <TextView
             android:id="@+id/tv_name"
             style="@style/base_text_style"
             android:layout_weight="1"
-            android:text="南殊黎"
+            tools:text="南殊黎"
             android:layout_marginLeft="12dp"
             />
 
