多图片上传和申请退款

--- a/app/src/main/res/layout/activity_big_image.xml
+++ b/app/src/main/res/layout/activity_big_image.xml
@@ -54,6 +54,7 @@
         style="@style/base_btn_style_large"
         android:background="@drawable/shape_line_white5"
         android:text="保存"
+        android:visibility="gone"
         android:paddingLeft="25dp"
         android:paddingRight="25dp"
         android:layout_alignParentBottom="true"
