--- a/app/src/main/res/layout/activity_order_apply_return.xml
+++ b/app/src/main/res/layout/activity_order_apply_return.xml
@@ -131,19 +131,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
-                    <ImageView
-                        android:id="@+id/iv_add_image"
-                        android:layout_width="90dp"
-                        android:layout_height="90dp"
-                        android:layout_marginLeft="12dp"
-                        android:src="@mipmap/icon_image_upload"
-                        android:layout_marginBottom="12dp"/>
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rv_image"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="12dp"/>
+                        android:layout_marginLeft="12dp"
+                        android:layout_marginBottom="12dp"/>
                 </LinearLayout>
 
 
@@ -208,12 +202,25 @@
                         android:layout_weight="1"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
-                        <TextView
-                            style="@style/base_text_style_gray_small"
-                            android:lineSpacingExtra="3dp"
-                            android:paddingLeft="12dp"
-                            android:text="客服电话：400 888 8888"
-                            />
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+                            <TextView
+                                style="@style/base_text_style_gray_small"
+                                android:lineSpacingExtra="3dp"
+                                android:paddingLeft="12dp"
+                                android:text="客服电话："
+                                />
+
+                            <TextView
+                                style="@style/base_text_style_gray_small"
+                                android:lineSpacingExtra="3dp"
+                                android:paddingLeft="12dp"
+                                android:text="13641869403"
+                                android:textColor="@color/baseColor"
+                                />
+                        </LinearLayout>
+
 
                         <TextView
                             style="@style/base_text_style_gray_small"
@@ -231,6 +238,7 @@
                         android:background="@drawable/shape_line_gray50"
                         android:textColor="@color/black_title_color"
                         android:text="拨打"
+                        android:layout_gravity="top"
                         android:layout_marginRight="12dp"
                         />
                 </LinearLayout>
