--- a/app/src/main/res/layout/activity_refund_detail.xml
+++ b/app/src/main/res/layout/activity_refund_detail.xml
@@ -46,6 +46,7 @@
                     android:id="@+id/tv_status1"
                     style="@style/base_text_style"
                     android:textColor="@color/white"
+                    android:visibility="gone"
                     android:text="退款金额将于1~2个工作日退还到您的钱包"
                     android:layout_marginTop="8dp"
                     android:textSize="12sp"
@@ -86,21 +87,22 @@
                 style="@style/base_text_style_gray_small"
                 android:layout_weight="1"
                 android:layout_marginTop="10dp"
-                android:text="订单编号：3426156446423315616" />
+                android:text="订单编号：" />
 
             <TextView
                 android:id="@+id/tv_pay_money"
                 style="@style/base_text_style_gray_small"
-                android:layout_weight="1"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:text="实付金额：￥999.00" />
+                android:layout_weight="1"
+                android:text="实付金额：￥" />
 
             <TextView
                 android:id="@+id/tv_create_time"
                 style="@style/base_text_style_gray_small"
                 android:layout_weight="1"
                 android:layout_marginTop="5dp"
-                android:text="下单时间：2019.06.15 13:14:20" />
+                android:text="下单时间：" />
 
 
             <TextView
@@ -108,21 +110,21 @@
                 style="@style/base_text_style_gray_small"
                 android:layout_weight="1"
                 android:layout_marginTop="5dp"
-                android:text="支付时间：2019.06.15 13:14:20" />
+                android:text="支付时间：" />
 
             <TextView
                 android:id="@+id/tv_send_time"
                 style="@style/base_text_style_gray_small"
                 android:layout_weight="1"
                 android:layout_marginTop="5dp"
-                android:text="发货时间：2019.06.15 13:14:20" />
+                android:text="发货时间：" />
 
             <TextView
                 android:id="@+id/tv_receive_time"
                 style="@style/base_text_style_gray_small"
                 android:layout_weight="1"
                 android:layout_marginTop="5dp"
-                android:text="收货时间：2019.06.15 13:14:20" />
+                android:text="收货时间：" />
 
 
 
@@ -145,8 +147,9 @@
                 android:id="@+id/tv_refund_reason"
                 style="@style/base_text_style"
                 android:layout_weight="1"
+                android:textSize="12sp"
                 android:layout_marginTop="10dp"
-                android:text="商品描述不符" />
+                tools:text="商品描述不符" />
 
 
 
@@ -155,7 +158,7 @@
                 style="@style/base_text_style_gray_small"
                 android:layout_weight="1"
                 android:layout_marginTop="5dp"
-                android:text="提交时间：2019.06.15 13:14:20" />
+                android:text="提交时间：" />
 
 
 
@@ -182,14 +185,16 @@
                 android:id="@+id/tv_refund_content"
                 style="@style/base_text_style"
                 android:layout_weight="1"
+                android:textSize="12sp"
                 android:layout_marginTop="10dp"
-                android:text="感觉看到的商品和描述不是很符合,感觉看到的商品和描述不是很符合" />
+                tools:text="感觉看到的商品和描述不是很符合,感觉看到的商品和描述不是很符合" />
 
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_image"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"/>
 
 
 
@@ -197,6 +202,7 @@
 
         <LinearLayout
             android:id="@+id/ll_failed_reason"
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="12dp"
