--- a/app/src/main/res/layout/activity_goods_detail.xml
+++ b/app/src/main/res/layout/activity_goods_detail.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/gray_bg"
     android:orientation="vertical">
 
@@ -34,6 +35,15 @@
             android:orientation="horizontal">
 
 
+            <ImageView
+                android:id="@+id/iv_share"
+                android:src="@mipmap/icon_share"
+                android:layout_width="40dp"
+                android:layout_height="match_parent"
+                android:padding="12dp"
+                style="@style/click_toolbar_style"
+                />
+
             <RelativeLayout
                 style="@style/click_toolbar_style"
                 android:layout_width="50dp"
@@ -56,14 +66,7 @@
                     />
             </RelativeLayout>
 
-            <ImageView
-                android:id="@+id/iv_share"
-                android:src="@mipmap/icon_share"
-                android:layout_width="40dp"
-                android:layout_height="match_parent"
-                android:padding="12dp"
-                style="@style/click_toolbar_style"
-                />
+
         </LinearLayout>
 
     </androidx.appcompat.widget.Toolbar>
@@ -142,7 +145,7 @@
                     android:layout_width="wrap_content"
                     android:textColor="@color/white"
                     android:layout_height="wrap_content"
-                    android:text="￥278\n单独购买"
+                    tools:text="￥278\n单独购买"
                     android:textSize="14sp"
                     android:gravity="center"
                     android:lineSpacingExtra="3dp"
@@ -165,7 +168,7 @@
                     android:layout_width="wrap_content"
                     android:textColor="@color/white"
                     android:layout_height="wrap_content"
-                    android:text="￥200\n参团购买"
+                    tools:text="￥200\n参团购买"
                     android:textSize="14sp"
                     android:gravity="center"
                     android:lineSpacingExtra="3dp"
