--- a/app/src/main/res/layout/fragment_goodsdetail.xml
+++ b/app/src/main/res/layout/fragment_goodsdetail.xml
@@ -45,10 +45,18 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/tv_unit"
+            style="@style/base_text_style"
+            android:textColor="@color/grayText"
+            android:textSize="12sp"
+            android:layout_marginLeft="12dp"
+            android:text="会员"
+            />
+
+        <TextView
             style="@style/base_text_style"
             android:textColor="@color/baseColor"
             android:textSize="12sp"
-            android:layout_marginLeft="12dp"
             android:text="￥"
             />
         <TextView
@@ -61,10 +69,22 @@
             android:textSize="16sp"
             android:textStyle="bold"
             tools:text="278" />
+
+
         <TextView
             android:id="@+id/tv_advance_price"
             style="@style/base_text_style_gray_small"
             tools:text="￥52.0"
+            android:layout_weight="1"
+            android:textSize="12sp"
+            />
+
+        <TextView
+            android:id="@+id/tv_return_integral"
+            style="@style/base_text_style_gray_small"
+            tools:text="返积分1%"
+            android:textColor="@color/black_title_color"
+            android:layout_marginRight="12dp"
             android:textSize="12sp"
             />
 
@@ -104,8 +124,19 @@
 
 
         <View
+            android:id="@+id/view_space"
             style="@style/base_space"
             />
+
+    <TextView
+        android:id="@+id/tv_no_vip_tip"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@style/base_text_style_gray_small"
+        android:background="@color/gray_bg"
+        android:padding="12dp"
+        android:text="联系右上角客服，加入灰姑娘会员，可享受会员价哦～"/>
 
         <LinearLayout
             android:id="@+id/ll_coupon"
