--- a/app/src/main/res/layout/layout_banner_graphic_and_text.xml
+++ b/app/src/main/res/layout/layout_banner_graphic_and_text.xml
@@ -36,6 +36,7 @@
 
     <LinearLayout
         android:id="@+id/ll_group"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:background="@color/baseColor"
         android:layout_height="wrap_content"
@@ -45,7 +46,6 @@
         android:paddingRight="12dp"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
-        android:visibility="gone"
         android:orientation="horizontal">
 
         <TextView
@@ -69,14 +69,28 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/tv_group_old_price"
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:textSize="12sp"
-                tools:text="￥278.00"/>
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/tv_group_old_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:textSize="10sp"
+                    tools:text="￥278.00"/>
+                <TextView
+                    android:id="@+id/tv_group_return"
+                    android:visibility="gone"
+                    android:layout_marginLeft="10dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:textSize="10sp"
+                    tools:text="返利1%"/>
+            </LinearLayout>
+
+
             <TextView
                 android:id="@+id/tv_group_tip"
                 android:layout_width="wrap_content"
