--- a/app/src/main/res/layout/pop_bottom_specification.xml
+++ b/app/src/main/res/layout/pop_bottom_specification.xml
@@ -50,13 +50,27 @@
             android:layout_height="70dp"
             android:layout_marginLeft="12dp"
             android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/tv_unit"
+                    style="@style/base_text_style"
+                    android:textColor="@color/grayText"
+                    tools:text="会员"
+                    android:textSize="12sp"
+                    android:drawablePadding="3dp"/>
+                <TextView
+                    android:id="@+id/tv_price"
+                    style="@style/base_text_style"
+                    android:textColor="@color/red"
+                    tools:text="￥169.00"
+                    android:textSize="12sp"
+                    android:drawablePadding="3dp"/>
+            </LinearLayout>
 
-            <TextView
-                android:id="@+id/tv_price"
-                style="@style/base_text_style"
-                android:textColor="@color/red"
-                tools:text="￥169.00"
-                android:drawablePadding="3dp"/>
+
 
             <TextView
                 android:id="@+id/tv_former_price"
