--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -79,12 +79,20 @@
         android:paddingTop="0dp"
         android:paddingBottom="12dp"
         >
+        <TextView
+            android:id="@+id/tv_btn0"
+            style="@style/base_btn_style"
+            android:visibility="gone"
+            android:background="@drawable/shape_line_blacktitle50"
+            android:textColor="@color/black_title_color"
+            android:text="取消" />
 
         <TextView
             android:id="@+id/tv_btn1"
             style="@style/base_btn_style"
             android:background="@drawable/shape_line_blacktitle50"
             android:textColor="@color/black_title_color"
+            android:layout_marginLeft="12dp"
             android:text="取消" />
 
         <TextView
