--- a/app/src/main/res/layout/activity_apply_product_support.xml
+++ b/app/src/main/res/layout/activity_apply_product_support.xml
@@ -336,6 +336,43 @@
 
 
 
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:layout_marginBottom="12dp"
+                android:orientation="horizontal">
+
+
+                <ImageView
+                    android:id="@+id/iv_agreement"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:paddingTop="12dp"
+                    android:paddingBottom="12dp"
+                    android:paddingLeft="12dp"
+                    android:paddingRight="12dp"
+                    android:src="@mipmap/agreement_selete_no"/>
+                <TextView
+                    style="@style/base_text_style"
+                    android:textSize="12sp"
+                    android:text="我已阅读并同意"/>
+
+                <TextView
+                    android:id="@+id/tv_register_agreement"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="12sp"
+                    android:textColor="@color/baseColor"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
+                    android:text="《商家供货协议》"/>
+
+
+
+
+            </LinearLayout>
 
 
 
