--- a/app/src/main/res/layout/item_find.xml
+++ b/app/src/main/res/layout/item_find.xml
@@ -87,6 +87,7 @@
         android:orientation="horizontal">
 
         <com.cinderellavip.weight.CircleImageView
+            android:id="@+id/iv_avatar"
             android:layout_width="15dp"
             android:layout_height="15dp"
             android:src="@mipmap/avater"/>
